# heuron

./: .gitignore  CHANGELOG.md  README.md  cabal.project  heuron.cabal
app/: Digits.hs  Main.hs  OpenGL.hs  Types.hs  V1Example.hs  V2Example.hs  View.hs
resources/: frag.glsl  vert.glsl
src/: Heuron.hs
src/Heuron/: Functions.hs  Neuron.hs  V1.hs  V2.hs
src/Heuron/V1/: Batched.hs  Input.hs  Matrix.hs  Network.hs  Single.hs  Vector.hs
src/Heuron/V1/Backend/Haskell/: Network.hs
src/Heuron/V1/Batched/: Activation.hs  Backprop.hs  Forward.hs  Input.hs  Layer.hs  Loss.hs  Network.hs  Optimizer.hs  Trainer.hs
src/Heuron/V1/Batched/Activation/: Backpropagation.hs  Function.hs
src/Heuron/V1/Batched/Layer/: Builder.hs  Layer.hs
src/Heuron/V1/Batched/Optimizer/: Function.hs  Types.hs
src/Heuron/V1/Single/: Network.hs
src/Heuron/V2/: Backend.hs  Layer.hs  Network.hs
src/Heuron/V2/Backend/: Haskell.hs  Translator.hs
src/Heuron/V2/Backend/Haskell/: Haskell.hs  State.hs
tests/: Main.hs
tests/Heuron/Test/V1/Batched/: ActivationSpec.hs  BatchedSpec.hs  LossSpec.hs  TrainerSpec.hs
tests/Heuron/Test/V2/: NetworkSpec.hs
