cabal-version:      2.4
name:               heuron
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norbert Dzikowski
maintainer:         norbert@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Heuron.V1
                    , Heuron.Functions
                    , Heuron.V1.Batched
                    , Heuron.V1.Batched.Network
                    , Heuron.V1.Batched.Input
                    , Heuron.V1.Batched.Forward
                    , Heuron.V1.Batched.Backprop
                    , Heuron.V1.Batched.Trainer
                    , Heuron.V1.Batched.Activation
                    , Heuron.V1.Batched.Activation.Function
                    , Heuron.V1.Batched.Loss
                    , Heuron.V1.Batched.Layer
                    , Heuron.V1.Batched.Optimizer
                    , Heuron.V1.Batched.Optimizer.Function
                    , Heuron.V1.Batched.Optimizer.Types
                    , Heuron.V1.Single

    -- Modules included in this library but not exported.
    other-modules:    Heuron.V1.Single.Network
                    , Heuron.V1.Matrix
                    , Heuron.V1.Vector

    default-extensions: TemplateHaskell
                      , DataKinds
                      , FlexibleContexts
                      , FlexibleInstances
                      , GADTs
                      , PolyKinds
                      , RankNTypes
                      , ScopedTypeVariables
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
    build-depends:    base ^>=4.14.3.0
                    , mtl
                    , lens
                    , number
                    , random
                    , linear
                    , vector
                    , streaming
                    , streaming-bytestring
                    , serialise
    hs-source-dirs:   src
    default-language: Haskell2010

executable heuron
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Digits

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        heuron,
        plots,
        diagrams-core,
        diagrams-lib,
        diagrams-contrib,
        diagrams-svg,
        bytestring,
        lens,
        vector,
        streaming,
        streaming-bytestring,
        random,
        mtl,
        linear,
        serialise,
        OpenGLRaw,
        data-default,
        loop,
        text,
        monomer

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite heuron-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    other-modules:  Heuron.Test.V1.Batched.BatchedSpec
                    , Heuron.Test.V1.Batched.ActivationSpec
                    , Heuron.Test.V1.Batched.TrainerSpec
                    , Heuron.Test.V1.Batched.LossSpec
    hs-source-dirs:   tests
    default-extensions: TypeApplications
                        , DataKinds
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , heuron
                    , random
                    , lens
                    , linear
                    , vector
